Shopping cart is implemented. Need to fix issue where it shifts whole page

--- a/ETES Website/Backup/css/shopping-cart.css
+++ b/ETES Website/Backup/css/shopping-cart.css
@@ -1,65 +1,17 @@
-$main-color: #6394F8;
-$light-text: #ABB0BE;
+/*
+sky-color: #CAEBF2
+carbon-color: #A9A9A9
+watermelon-color: #FF3B3F
+neutral-color: #EFEFEF
+*/
 
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-body {
-  font: 14px/22px "Lato", Arial, sans-serif;
-  background: #6394F8;
-}
-
-.lighter-text {
-  color: #ABB0BE;
-}
-
-.main-color-text {
-  color: $main-color;
-}
-
-nav {
-  padding: 20px 0 40px 0;
-  background: #F8F8F8;
-  font-size: 16px;
-  
-  .navbar-left {
-    float: left;
-  }
-  
-  .navbar-right {
-    float: right;
-  }
-  ul {
-    
-    li {
-      display: inline;
-      padding-left: 20px;
-      a {
-        color: #777777;
-        text-decoration: none;
-        
-        &:hover {
-          color: black;
-        }
-      }
-    }
-  }
-}
-
-.container {
-  margin: auto;
-  width: 80%;
-}
-
 .badge {
-    background-color: #6394F8;
+    background-color: #FF3B3F;
     border-radius: 10px;
-    color: white;
+    color: #EFEFEF;
     display: inline-block;
     font-size: 12px;
     line-height: 1;
@@ -70,9 +22,9 @@ nav {
 }
 
 .shopping-cart {
-  margin: 20px 0;
+  margin: 16px 0;
   float: right;
-  background: white;
+  background: #A9A9A9;
   width: 320px;
   position: relative;
   border-radius: 3px;
@@ -80,7 +32,7 @@ nav {
   
   
   .shopping-cart-header {
-    border-bottom: 1px solid #E8E8E8;
+    border-bottom: 1px solid #A9A9A9;
     padding-bottom: 15px;
     
     .shopping-cart-total {
@@ -89,7 +41,6 @@ nav {
   }
   
   .shopping-cart-items {
-    
     padding-top: 20px;
 
       li {
@@ -98,7 +49,7 @@ nav {
 
     img {
       float: left;
-      margin-right: 12px;
+      margin-right: 10px;
     }
     
     .item-name {
@@ -108,15 +59,14 @@ nav {
     }
     
     .item-price {
-      color: $main-color;
+      color: #EFEFEF;
       margin-right: 8px;
     }
     
     .item-quantity {
-      color: $light-text;
+      color: white;
     }
-  }
-   
+  } 
 }
 
 .shopping-cart:after {
@@ -128,21 +78,21 @@ nav {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-bottom-color: white;
-  border-width: 8px;
+  border-bottom-color: #A9A9A9;
+  border-width: 12px;
   margin-left: -8px;
 }
 
 .cart-icon {
-  color: #515783;
-  font-size: 24px;
+  color: #FF3B3F;
+  font-size: 30px;
   margin-right: 7px;
   float: left;
 }
 
 .button {
-  background: $main-color;
-  color:white;
+  background: #FF3B3F;
+  color:#EFEFEF;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -152,7 +102,7 @@ nav {
   margin: 25px 0 15px 0;
   
   &:hover {
-    background: lighten($main-color, 3%);
+    background: lighten(#FF3B3F, 3%);
   }
 }
 
@@ -161,5 +111,3 @@ nav {
   display: table;
   clear: both;
 }
-
-
